--- a/vmware/enterprise-linux/http/kickstart.cfg
+++ b/vmware/enterprise-linux/http/kickstart.cfg
@@ -1,5 +1,5 @@
 #version=RHEL8
-ignoredisk --only-use=sda
+
 # Use TEXT install
 text
 # EULA
@@ -14,8 +14,8 @@ lang en_US.UTF-8 --addsupport=zh_CN.UTF-8
 firewall --disabled
 # SELinux information
 selinux --permissive
-
-
+# Network information
+network --hostname=Enterprise-Linux-Template
 # Root password
 rootpw --plaintext root
 # Partition clearing information
@@ -29,80 +29,47 @@ bootloader --timeout=1 --location=mbr --append="rhgb quiet crashkernel=auto"
 zerombr
 # Do not configure the X Window System
 skipx
+# System services
+services --enabled="chronyd"
 # System timezone
 timezone Asia/Shanghai --isUtc --ntpservers=ntp1.aliyun.com,ntp2.aliyun.com,ntp3.aliyun.com
-
-auth --passalgo=sha512 --useshadow
+user --gecos="devops" --groups=wheel --name=devops --password=devops --plaintext --uid=1000 --gid=1000
 
 %packages
 @^minimal-environment
 @development
-cmake
--byacc
--ctags
--diffstat
--intltool
--ltrace
--patchutils
--perl-generators
--perl-Fedora-VSP
--pesign
--systemtap
--jna
--valgrind
--valgrind-devel
-@standard
-nfs-utils
+# open-vm-tools
+open-vm-tools
+# editor
+vim
+# traceroute
 traceroute
--blktrace
--bpftool
--cockpit
--cryptsetup
--dos2unix
--dosfstools
--gnupg2
--ledmon
--libstoragemgmt
--mailcap
--mdadm
--mlocate
--mtr
--pinfo
--plymouth
--realmd
--smartmontools
--sos
--sssd
--strace
--subscription-manager-cockpit
--teamd
--usbutils
--vdo
--kmod-kvdo
--virt-what
--words
--xfsdump
--fprintd-pam
--dnf-plugin-spacewalk
--rhn-client-tools
--rhnlib
--rhnsd
--rhn-setup
--insights-client
-@legacy-unix
-telnet
-@network-tools
+# network traffic monitoring tool
+tcpdump
 nmap
-wireshark
--libreswan
+nmap-ncat
+hdparm
+fio
+iperf3
+# utils
+bind-utils
+nfs-utils
+net-tools
+# compression utils
+zip
+unzip
+bzip2
+rsync
 %end
 
-%addon com_redhat_kdump --disable --reserve-mb=auto
+%addon com_redhat_kdump --disable --reserve-mb=128
 
 %end
 
-%post
-# sudo
+%post --log=/root/ks-post.log
+# subscription-manager
+subscription-manager register --org=00000000 --activationkey=Enterprise-Linux-Template
+# sudoers
 echo '%devops ALL=(ALL) NOPASSWD: ALL' >>/etc/sudoers.d/devops
 chmod 440 /etc/sudoers.d/devops
 echo '%wheel ALL=(ALL) NOPASSWD: ALL' >>/etc/sudoers.d/wheel
@@ -111,4 +78,4 @@ chmod 440 /etc/sudoers.d/wheel
 systemctl disable kdump
 %end
 
-reboot
+reboot --eject
