--- a/vmware/enterprise-linux/http/ks.cfg
+++ b/vmware/enterprise-linux/http/ks.cfg
@@ -1,1 +1,94 @@
-# TODO
+#version=RHEL8
+
+# Use TEXT install
+text
+# EULA
+eula --agreed
+# Use CDROM installation media
+cdrom
+# Keyboard layouts
+keyboard --vckeymap=us --xlayouts='us'
+# System language
+lang en_US.UTF-8 --addsupport=zh_CN.UTF-8
+# Firewall information
+firewall --disabled
+# SELinux information
+selinux --permissive
+# Network information
+network --hostname=HomeLabs
+# Root password
+rootpw --plaintext root
+# Partition clearing information
+clearpart --all --initlabel
+# Disk partitioning information
+autopart --fstype=xfs --nolvm --nohome --noboot --noswap
+# Do NOT Run the Setup Agent on first boot
+firstboot --disable
+# Bootloader information
+bootloader --timeout=1 --location=mbr --append="rhgb quiet crashkernel=auto"
+zerombr
+# Do not configure the X Window System
+skipx
+# System services
+services --enabled="chronyd"
+# System timezone
+timezone Asia/Shanghai --isUtc --ntpservers=ntp1.aliyun.com,ntp2.aliyun.com,ntp3.aliyun.com
+user --gecos="devops" --groups=wheel --name=devops --password=devops --plaintext --uid=1000 --gid=1000
+
+%packages
+@^minimal-environment
+-iwl*firmware
+bash-completion
+# VMware platform specific packages
+open-vm-tools
+# editor
+vim
+# network tools
+traceroute
+tcpdump
+nmap
+nmap-ncat
+fio
+iperf3
+# dns tools
+bind-utils
+# nfs tools
+nfs-utils
+# compression tools
+zip
+unzip
+bzip2
+# sync tools
+rsync
+# c/c++
+gcc
+gcc-c++
+make
+cmake
+# containers
+podman
+podman-docker
+buildah
+%end
+
+%addon com_redhat_kdump --disable --reserve-mb=128
+
+%end
+
+%post --log=/root/ks-post.log
+# 00:0C:29:C7:61:B1
+# subscription-manager
+# subscription-manager register --org=12191284 --activationkey=EnterpriseLinux
+# sudoers
+echo '%devops ALL=(ALL) NOPASSWD: ALL' >>/etc/sudoers.d/devops
+chmod 440 /etc/sudoers.d/devops
+echo '%wheel ALL=(ALL) NOPASSWD: ALL' >>/etc/sudoers.d/wheel
+chmod 440 /etc/sudoers.d/wheel
+# kdump
+systemctl disable kdump
+# zulu
+# rpm --import https://www.azul.com/files/0xB1998361219BD9C9.txt
+# dnf install https://cdn.azul.com/zulu/bin/zulu-repo-1.0.0-1.noarch.rpm
+%end
+
+shutdown
