--- a/vmware/enterprise-linux/http/ks.cfg
+++ b/vmware/enterprise-linux/http/ks.cfg
@@ -39,6 +39,7 @@ user --gecos="devops" --groups=wheel --name=devops --password=devops --plaintext
 @^minimal-environment
 -iwl*firmware
 bash-completion
+util-linux-user
 # VMware platform specific packages
 open-vm-tools
 # editor
@@ -60,6 +61,8 @@ unzip
 bzip2
 # sync tools
 rsync
+# git tools
+git
 # c/c++
 gcc
 gcc-c++
