--- a/vmware/enterprise-linux/http/ks.cfg
+++ b/vmware/enterprise-linux/http/ks.cfg
@@ -10,22 +10,22 @@ cdrom
 keyboard --vckeymap=us --xlayouts='us'
 # System language
 lang en_US.UTF-8 --addsupport=zh_CN.UTF-8
-# Firewall information
+# Firewall configuration
 firewall --disabled
-# SELinux information
+# SELinux configuration
 selinux --permissive
-# Network information
-network --hostname=HomeLabs
+# Network configuration
+network --hostname=HomeLabs --bootproto=dhcp --noipv6 --onboot=on --device=eth0
 # Root password
 rootpw --plaintext root
-# Partition clearing information
+# Disk configuration
 clearpart --all --initlabel
-# Disk partitioning information
+# Partition configuration
 autopart --fstype=xfs --nolvm --nohome --noboot --noswap
 # Do NOT Run the Setup Agent on first boot
 firstboot --disable
-# Bootloader information
-bootloader --timeout=1 --location=mbr --append="rhgb quiet crashkernel=auto"
+# Bootloader configuration
+bootloader --timeout=1 --location=mbr --append="net.ifnames=0 biosdevname=0"
 zerombr
 # Do not configure the X Window System
 skipx
@@ -37,41 +37,13 @@ user --gecos="devops" --groups=wheel --name=devops --password=devops --plaintext
 
 %packages
 @^minimal-environment
--iwl*firmware
-bash-completion
-util-linux-user
 # VMware platform specific packages
 open-vm-tools
-# editor
-vim
-# network tools
-traceroute
-tcpdump
-nmap
-nmap-ncat
-fio
-iperf3
-# dns tools
-bind-utils
-# nfs tools
-nfs-utils
-# compression tools
-zip
-unzip
-bzip2
-# sync tools
-rsync
-# git tools
-git
-# c/c++
-gcc
-gcc-c++
-make
-cmake
-# containers
-podman
-podman-docker
-buildah
+-fprintd
+-fprintd-pam
+-intltool
+-iwl*-firmware
+-microcode_ctl
 %end
 
 %addon com_redhat_kdump --disable --reserve-mb=128
@@ -79,19 +51,14 @@ buildah
 %end
 
 %post --log=/root/ks-post.log
-# 00:0C:29:C7:61:B1
-# subscription-manager
-# subscription-manager register --org=12191284 --activationkey=EnterpriseLinux
+
 # sudoers
 echo '%devops ALL=(ALL) NOPASSWD: ALL' >>/etc/sudoers.d/devops
 chmod 440 /etc/sudoers.d/devops
-echo '%wheel ALL=(ALL) NOPASSWD: ALL' >>/etc/sudoers.d/wheel
-chmod 440 /etc/sudoers.d/wheel
+
 # kdump
 systemctl disable kdump
-# zulu
-# rpm --import https://www.azul.com/files/0xB1998361219BD9C9.txt
-# dnf install https://cdn.azul.com/zulu/bin/zulu-repo-1.0.0-1.noarch.rpm
+
 %end
 
 shutdown
