--- a/vmware/centos/7/http/8-stream/ks.cfg
+++ b/vmware/centos/7/http/8-stream/ks.cfg
@@ -1,7 +1,7 @@
 #version=RHEL8
 
-# Use CMDLINE install
-cmdline
+# Use TEXT install
+text
 # EULA
 eula --agreed
 # Use CDROM installation media
@@ -21,7 +21,7 @@ rootpw --plaintext root
 # Disk configuration
 clearpart --all --initlabel
 # Partition configuration
-autopart --fstype=xfs --type=plain --nohome --noboot --noswap
+autopart --fstype=xfs --nolvm --nohome --noboot --noswap
 # Do NOT Run the Setup Agent on first boot
 firstboot --disable
 # Bootloader configuration
@@ -53,27 +53,12 @@ open-vm-tools
 %post --log=/root/ks-post.log
 
 # sudoers
-echo 'Defaults:devops !requiretty' >/etc/sudoers.d/devops
 echo '%devops ALL=(ALL) NOPASSWD: ALL' >>/etc/sudoers.d/devops
 chmod 440 /etc/sudoers.d/devops
 
 # kdump
 systemctl disable kdump
 
-rm -f /etc/sysconfig/network-scripts/ifcfg-e*
-cat >/etc/sysconfig/network-scripts/ifcfg-eth0 <<_EOF_
-TYPE=Ethernet
-PROXY_METHOD=none
-BROWSER_ONLY=no
-BOOTPROTO=dhcp
-DEFROUTE=yes
-IPV4_FAILURE_FATAL=no
-IPV6INIT=no
-IPV6_DISABLED=yes
-NAME=eth0
-DEVICE=eth0
-ONBOOT=yes
-_EOF_
 %end
 
-reboot --eject
+shutdown
