--- a/vsphere/vsphere-static/Static-01/ks.cfg
+++ b/vsphere/vsphere-static/Static-01/ks.cfg
@@ -15,7 +15,7 @@ firewall --disabled
 # SELinux information
 selinux --permissive
 # Network information
-network --device=ens192 --hostname=hadoop-03 --bootproto=static --ip=172.16.118.3 --netmask=255.255.0.0 --gateway=172.16.0.1 --nameserver=172.16.120.100 --noipv6 --activate
+network --device=ens192 --hostname=zookeeper-01 --bootproto=static --ip=172.16.20.31 --netmask=255.255.0.0 --gateway=172.16.0.1 --nameserver=172.16.120.100 --noipv6 --activate
 # repo --name="Minimal" --baseurl=file:///run/install/repo/Minimal
 # Root password
 rootpw --plaintext root
@@ -63,11 +63,16 @@ zip
 unzip
 bzip2
 rsync
--*firmware
 # screen utils
 screen
 # openjdk 11
 java-11-openjdk
+# unnecessary firmware
+-fprintd
+-fprintd-pam
+-intltool
+-iwl*-firmware
+-microcode_ctl
 %end
 
 %addon com_redhat_kdump --disable --reserve-mb='auto'
@@ -75,15 +80,12 @@ java-11-openjdk
 %end
 
 %post
+
 # sudo
-echo '%devops ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers.d/devops
+echo '%devops ALL=(ALL) NOPASSWD: ALL' >>/etc/sudoers.d/devops
 chmod 440 /etc/sudoers.d/devops
-echo '%wheel ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers.d/wheel
-chmod 440 /etc/sudoers.d/wheel
 # kdump
 systemctl disable kdump
-
-sync
 
 %end
 
