--- a/vmware/enterprise-linux/http/x/ks.cfg
+++ b/vmware/enterprise-linux/http/x/ks.cfg
@@ -15,7 +15,7 @@ firewall --disabled
 # SELinux configuration
 selinux --permissive
 # Network configuration
-network --hostname=HomeLabs --bootproto=dhcp --onboot=on --noipv6 --device=eth0
+network --hostname=HomeLabs --bootproto=dhcp --onboot=on --noipv6
 # Root password
 rootpw --plaintext root
 # Disk configuration
@@ -25,10 +25,10 @@ autopart --fstype=xfs --type=plain --nohome --noboot --noswap
 # Do NOT Run the Setup Agent on first boot
 firstboot --disable
 # Bootloader configuration
-bootloader --timeout=1 --location=mbr --append="net.ifnames=0 biosdevname=0"
+bootloader --timeout=1 --location=mbr
 zerombr
 # Do not configure the X Window System
-skipx
+xconfig --startxonboot #--resolution=800x600
 # System services
 services --enabled="chronyd"
 # System timezone
@@ -36,9 +36,19 @@ timezone Asia/Shanghai --isUtc --ntpservers=ntp1.aliyun.com,ntp2.aliyun.com,ntp3
 user --gecos="devops" --groups=wheel --name=devops --password=devops --plaintext --uid=1000 --gid=1000
 
 %packages
-@^minimal-environment
+@base
+@core
+@fonts
+@gnome-desktop
+@guest-desktop-agents
+@input-methods
+@internet-browser
+@network-file-system-client
+mesa-libxatracker
+xorg-x11-drv-vmware
 # VMware platform specific packages
 open-vm-tools
+open-vm-tools-desktop
 -fprintd
 -fprintd-pam
 -intltool
@@ -59,20 +69,6 @@ chmod 440 /etc/sudoers.d/devops
 
 # kdump
 systemctl disable kdump
-
-rm -f /etc/sysconfig/network-scripts/ifcfg-e*
-cat >/etc/sysconfig/network-scripts/ifcfg-eth0 <<_EOF_
-TYPE=Ethernet
-PROXY_METHOD=none
-BROWSER_ONLY=no
-BOOTPROTO=dhcp
-DEFROUTE=yes
-IPV4_FAILURE_FATAL=no
-IPV6INIT=no
-NAME=eth0
-DEVICE=eth0
-ONBOOT=yes
-_EOF_
 %end
 
-reboot --eject
+shutdown
