--- a/vsphere/vsphere-static/Static-01/ks.cfg
+++ b/vsphere/vsphere-static/Static-01/ks.cfg
@@ -15,7 +15,7 @@ firewall --disabled
 # SELinux information
 selinux --permissive
 # Network information
-network --device=ens192 --hostname=zookeeper-01 --bootproto=static --ip=172.16.20.31 --netmask=255.255.0.0 --gateway=172.16.0.1 --nameserver=172.16.120.100 --noipv6 --activate
+network --device=ens192 --hostname=static-01 --bootproto=static --ip=172.16.20.31 --netmask=255.255.0.0 --gateway=172.16.0.1 --nameserver=172.16.120.100 --noipv6 --activate
 # repo --name="Minimal" --baseurl=file:///run/install/repo/Minimal
 # Root password
 rootpw --plaintext root
